fix: restructured lesson 01

--- a/01-Hello-world-and-operator-if/lesson-code/hello-world/hello-world.vcxproj
+++ b/01-Hello-world-and-operator-if/lesson-code/hello-world/hello-world.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4d6074a7-b664-4b19-8bee-8860d0fbaab0}</ProjectGuid>
-    <RootNamespace>Project2</RootNamespace>
+    <ProjectGuid>{c0db72a6-2a33-482d-95f7-e582f003ed3b}</ProjectGuid>
+    <RootNamespace>helloworld</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="new_file.c" />
+    <ClCompile Include="hello-world.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
