--- a/01-Hello-world-and-operator-if/lesson-code/hello-world/hello-world.vcxproj.filters
+++ b/01-Hello-world-and-operator-if/lesson-code/hello-world/hello-world.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hello_world.c">
+    <ClCompile Include="hello-world.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
