--- a/01-Hello-world-and-operator-if/lesson-code/02-operator-if/02-operator-if.vcxproj
+++ b/01-Hello-world-and-operator-if/lesson-code/02-operator-if/02-operator-if.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c0db72a6-2a33-482d-95f7-e582f003ed3b}</ProjectGuid>
-    <RootNamespace>helloworld</RootNamespace>
+    <ProjectGuid>{402191dc-ca9c-449f-b7c4-3e9232fd3d84}</ProjectGuid>
+    <RootNamespace>My02operatorif</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="hello-world.c" />
+    <ClCompile Include="operator-if.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
